--- a/prueba_template/index.html
+++ b/prueba_template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
   <title>index</title>
 </head>
 <body>
-  <h1>hola</h1>
+  <h1>hola mundo desde html!</h1>
 </body>
 </html>
